Added icon and stuff

--- a/extention/popup.html
+++ b/extention/popup.html
@@ -4,6 +4,6 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles/main.css"></head>
         <body>
-            <script src="scripts/popup.js"></script>
+            <script src="scripts/floating-widget.js"></script>
         </body>
 </html>
